@@ -1,3 +1,5 @@
+2006-07-06:  Added Vec.concat.
+
 2006-06-08:  Fixed some GC-bugs.  Cleaned up C-code.
 
 2006-01-21:  Updated copy of f2c.h to fix size-related bugs on AMD64.
